--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.352.0",
     "luxon": "^3.4.4",
     "match-sorter": "^6.3.4",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-data-table-component": "^7.6.2",
